force-app/main/default/objects/Live_Disruption__c/Live_Disruption__c.object-meta.xml
<CustomObject>
    <label>Live Disruption</label>
    <nameField>
        <displayFormat>LDN-{0000}</displayFormat>
        <label>Live Disruption Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Disruptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>