force-app/main/default/objects/Live_Disruption__c/fields/Alternative_depot_s_info_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Alternative_depot_s_info_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative depot(s) Reviewed</label>
    <type>Checkbox</type>
</CustomField>