force-app/main/default/objects/Live_Disruption__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>last mile</fullName>
            </value>
            <value>
                <fullName>load location 3rd party</fullName>
            </value>
            <value>
                <fullName>load location Shell</fullName>
            </value>
            <value>
                <fullName>primary Transport Source 3rd Party</fullName>
                <isActive>false</isActive>
                <label>primary Transport Source 3rd Party</label>
            </value>
            <value>
                <fullName>primary Transport Source Shell</fullName>
                <isActive>false</isActive>
                <label>primary Transport Source Shell</label>
            </value>
            <value>
                <fullName>regional transport</fullName>
            </value>
            <value>
                <fullName>terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>