force-app/main/default/objects/Live_Disruption__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delayed Primary Transport</fullName>
            </value>
            <value>
                <fullName>Delayed 3rd Party Delivery</fullName>
            </value>
            <value>
                <fullName>Overlifting</fullName>
            </value>
            <value>
                <fullName>Hydrocarbon Availability</fullName>
            </value>
            <value>
                <fullName>3rd Party Information</fullName>
            </value>
            <value>
                <fullName>Planned Maintenance</fullName>
            </value>
            <value>
                <fullName>Unplanned Maintenance</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>CSO Cover</fullName>
            </value>
            <value>
                <fullName>Spec Change</fullName>
            </value>
            <value>
                <fullName>Weather Conditions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Opening Hour</fullName>
            </value>
            <value>
                <fullName>Cancelled Primary transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>