force-app/main/default/objects/Live_Disruption__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Internal (Shell users) Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>