force-app/main/default/objects/Live_Disruption__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>United kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>