force-app/main/default/objects/Live_Disruption__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedBy</label>
    <type>Text</type>
</CustomField>