force-app/main/default/objects/Live_Disruption__c/fields/Estimated_End_Date1__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date1__c</fullName>
    <formula>IF( ISBLANK( Estimated_End_Date__c ),&apos;Unknown&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated End Date</label>
    <type>Text</type>
</CustomField>