force-app/main/default/objects/Live_Disruption__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <label>Estimated End Date</label>
    <type>DateTime</type>
</CustomField>