force-app/main/default/objects/Live_Disruption__c/fields/External_Check__c.field-meta.xml
<CustomField>
    <fullName>External_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Check</label>
    <type>Checkbox</type>
</CustomField>