force-app/main/default/objects/Live_Disruption__c/fields/External_Stakeholders_Comment__c.field-meta.xml
<CustomField>
    <fullName>External_Stakeholders_Comment__c</fullName>
    <label>External (Stakeholders) Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>