force-app/main/default/objects/Live_Disruption__c/fields/IK_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>IK_Location_Code__c</fullName>
    <formula>IK_Locations__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>