force-app/main/default/objects/Live_Disruption__c/fields/IK_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>IK_Location_Name__c</fullName>
    <formula>IK_Locations__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>