force-app/main/default/objects/Live_Disruption__c/fields/IK_Locations__c.field-meta.xml
<CustomField>
    <fullName>IK_Locations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>IK_Location__c</referenceTo>
    <relationshipLabel>Live Disruptions (IKLocation)</relationshipLabel>
    <relationshipName>Live_Disruptions2</relationshipName>
    <type>Lookup</type>
</CustomField>