force-app/main/default/objects/Live_Disruption__c/fields/IK_Option_1__c.field-meta.xml
<CustomField>
    <fullName>IK_Option_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option 1</label>
    <referenceTo>IK_Location__c</referenceTo>
    <relationshipLabel>Live Disruptions</relationshipLabel>
    <relationshipName>Live_Disruptions</relationshipName>
    <type>Lookup</type>
</CustomField>