force-app/main/default/objects/Live_Disruption__c/fields/IK_Option_1_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>IK_Option_1_Location_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(  IK_Option_1__r.Name )),IK_Option_1__r.Name ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option 1 Location Name</label>
    <type>Text</type>
</CustomField>