force-app/main/default/objects/Live_Disruption__c/fields/Last_ModfiedBy__c.field-meta.xml
<CustomField>
    <fullName>Last_ModfiedBy__c</fullName>
    <formula>LastModifiedBy.FirstName + &apos; &apos; +  LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last ModfiedBy</label>
    <type>Text</type>
</CustomField>