force-app/main/default/objects/Live_Disruption__c/fields/Now__c.field-meta.xml
<CustomField>
    <fullName>Now__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Now</label>
    <type>DateTime</type>
</CustomField>