force-app/main/default/objects/Live_Disruption__c/fields/Option_1_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Option_1_Location_Code__c</fullName>
    <formula>Option__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option 1 Location Code</label>
    <type>Text</type>
</CustomField>