force-app/main/default/objects/Live_Disruption__c/fields/Option_2__c.field-meta.xml
<CustomField>
    <fullName>Option_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option 2</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Live Disruptions (Option 2)</relationshipLabel>
    <relationshipName>Live_Disruptions1</relationshipName>
    <type>Lookup</type>
</CustomField>