force-app/main/default/objects/Live_Disruption__c/fields/Option_2_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Option_2_Location_Code__c</fullName>
    <formula>Option_2__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option 2 Location Code</label>
    <type>Text</type>
</CustomField>