force-app/main/default/objects/Live_Disruption__c/fields/Option_2_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Option_2_Location_Name__c</fullName>
    <formula>IF(NOT(ISBLANK( Option_2__r.Name)),Option_2__r.Name,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option 2 Location Name</label>
    <type>Text</type>
</CustomField>