force-app/main/default/objects/Live_Disruption__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option 1</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Live Disruptions (Option)</relationshipLabel>
    <relationshipName>Live_Disruptions</relationshipName>
    <type>Lookup</type>
</CustomField>