force-app/main/default/objects/Live_Disruption__c/fields/Option_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Option_Location_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Option__r.Name)),Option__r.Name,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option 1 Location Name</label>
    <type>Text</type>
</CustomField>