force-app/main/default/objects/Live_Disruption__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AGO Austria</fullName>
            </value>
            <value>
                <fullName>AGO VPD</fullName>
            </value>
            <value>
                <fullName>Avgas</fullName>
            </value>
            <value>
                <fullName>GTL</fullName>
            </value>
            <value>
                <fullName>IGO Austria</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>Jet-A1</fullName>
            </value>
            <value>
                <fullName>ULG100 VP</fullName>
            </value>
            <value>
                <fullName>ULG95 E10</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
            <value>
                <fullName>ULG98</fullName>
            </value>
            <value>
                <fullName>AD10</fullName>
                <isActive>false</isActive>
                <label>AD10</label>
            </value>
            <value>
                <fullName>AGO B0</fullName>
                <isActive>false</isActive>
                <label>AGO B0</label>
            </value>
            <value>
                <fullName>AGO B0 CH</fullName>
                <isActive>false</isActive>
                <label>AGO B0 CH</label>
            </value>
            <value>
                <fullName>AGO B7</fullName>
                <isActive>false</isActive>
                <label>AGO B7</label>
            </value>
            <value>
                <fullName>Dry Base</fullName>
                <isActive>false</isActive>
                <label>Dry Base</label>
            </value>
            <value>
                <fullName>Ethanol</fullName>
                <isActive>false</isActive>
                <label>Ethanol</label>
            </value>
            <value>
                <fullName>FAME</fullName>
                <isActive>false</isActive>
                <label>FAME</label>
            </value>
            <value>
                <fullName>GTL B0</fullName>
                <isActive>false</isActive>
                <label>GTL B0</label>
            </value>
            <value>
                <fullName>IGO 1000ppm</fullName>
                <isActive>false</isActive>
                <label>IGO 1000ppm</label>
            </value>
            <value>
                <fullName>PU10</fullName>
                <isActive>false</isActive>
                <label>PU10</label>
            </value>
            <value>
                <fullName>ULG95 E0</fullName>
                <isActive>false</isActive>
                <label>ULG95 E0</label>
            </value>
            <value>
                <fullName>ULG95_BOB_E10</fullName>
                <isActive>false</isActive>
                <label>ULG95_BOB_E10</label>
            </value>
            <value>
                <fullName>ULG95_BOB_E5</fullName>
                <isActive>false</isActive>
                <label>ULG95_BOB_E5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>