force-app/main/default/objects/Live_Disruption__c/fields/Resolve_date__c.field-meta.xml
<CustomField>
    <fullName>Resolve_date__c</fullName>
    <label>Resolve date</label>
    <type>Date</type>
</CustomField>