force-app/main/default/objects/Live_Disruption__c/fields/Resolve_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Date_Time__c</fullName>
    <label>Resolve Date Time</label>
    <type>DateTime</type>
</CustomField>