force-app/main/default/objects/Live_Disruption__c/fields/Resolve_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Time__c</fullName>
    <label>Resolve Time</label>
    <type>Time</type>
</CustomField>