force-app/main/default/objects/Live_Disruption__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>TEXT(IK_Locations__r.Region_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>