force-app/main/default/objects/Live_Disruption__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Constraint</fullName>
            </value>
            <value>
                <fullName>Physical Product Outage</fullName>
            </value>
            <value>
                <fullName>Non-Physical Product Outage</fullName>
            </value>
            <value>
                <fullName>Outage</fullName>
                <isActive>false</isActive>
                <label>Outage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>