force-app/main/default/objects/Live_Disruption__c/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Resolve_Date_Time__c)), ISPICKVAL(Resolution_Status__c,&apos;Resolved&apos;) ), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 20, 20), 
IF(TEXT(Status__c) = &apos;Physical Product Outage&apos;, IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;, 20, 20), 
IF(TEXT(Status__c) = &apos;Constraint&apos;, IMAGE(&quot;/img/msg_icons/warning24.png&quot;, &quot;Yellow&quot;, 20, 20), 
IF(TEXT(Status__c) = &apos;Non-Physical Product Outage&apos;, IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;, 20, 20),IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Red&quot;, 20, 20)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>