force-app/main/default/objects/Live_Disruption__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Barge availability</fullName>
            </value>
            <value>
                <fullName>contingent closed</fullName>
            </value>
            <value>
                <fullName>Delayed barge</fullName>
            </value>
            <value>
                <fullName>delayed empty RTCs</fullName>
            </value>
            <value>
                <fullName>IT issues</fullName>
            </value>
            <value>
                <fullName>locomotive availability</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>overlifting</fullName>
            </value>
            <value>
                <fullName>parallel MoT loading</fullName>
            </value>
            <value>
                <fullName>planned maintenance</fullName>
            </value>
            <value>
                <fullName>product availability</fullName>
            </value>
            <value>
                <fullName>quality</fullName>
            </value>
            <value>
                <fullName>rail track closed</fullName>
            </value>
            <value>
                <fullName>spec change</fullName>
            </value>
            <value>
                <fullName>staff</fullName>
            </value>
            <value>
                <fullName>technical issues</fullName>
            </value>
            <value>
                <fullName>truck gantry</fullName>
            </value>
            <value>
                <fullName>weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>