force-app/main/default/objects/Live_Disruption__c/validationRules/External_checkbox_true.validationRule-meta.xml
<ValidationRule>
    <fullName>External_checkbox_true</fullName>
    <active>true</active>
    <description>If user enters external comment external check is mandatory and vice versa.</description>
    <errorConditionFormula>AND(NOT(ISBLANK( External_Stakeholders_Comment__c )), External_Check__c == false)</errorConditionFormula>
    <errorDisplayField>External_Check__c</errorDisplayField>
    <errorMessage>Please check this checkbox</errorMessage>
</ValidationRule>