force-app/main/default/objects/Live_Disruption__c/validationRules/External_comment_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>External_comment_mandatory</fullName>
    <active>true</active>
    <description>If user enters external comment external check is mandatory and vice versa.</description>
    <errorConditionFormula>AND(ISBLANK( External_Stakeholders_Comment__c ), External_Check__c == true)</errorConditionFormula>
    <errorDisplayField>External_Stakeholders_Comment__c</errorDisplayField>
    <errorMessage>Please enter Comment</errorMessage>
</ValidationRule>