force-app/main/default/objects/Live_Disruption__c/listViews/Live_Disruption_Autria.listView-meta.xml
<ListView>
    <fullName>Live_Disruption_Autria</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Status_Indicator__c</columns>
    <columns>NAME</columns>
    <columns>IK_Locations__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Cause__c</columns>
    <columns>Begin_Date__c</columns>
    <columns>Estimated_End_Date__c</columns>
    <columns>Comment__c</columns>
    <columns>Resolve_Date_Time__c</columns>
    <columns>Resolution_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolution_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Austria</value>
    </filters>
    <filters>
        <field>IK_Locations__c</field>
        <operation>equals</operation>
        <value>Altmannshofen depot,Shell/Gunvor Ingolstadt,Shell/BO Neustadt,München TanQuid depot</value>
    </filters>
    <label>Live Disruptions - Austria</label>
</ListView>