force-app/main/default/objects/Live_Disruption__c/listViews/Live_Disruptions_South.listView-meta.xml
<ListView>
    <fullName>Live_Disruptions_South</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>IK_Locations__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Cause__c</columns>
    <columns>Begin_Date__c</columns>
    <columns>Estimated_End_Date__c</columns>
    <columns>Comment__c</columns>
    <columns>Resolve_Date_Time__c</columns>
    <columns>Resolution_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IK_Location_Name__c</field>
        <operation>equals</operation>
        <value>Vohburg Bayernoil Gantry,Ingolstadt Gunvor Gantry,Neustadt Bayernoil Gantry,Altmannshofen Shell Depot,Shell/TLS Stuttgart,Karlsruhe MiRO Gantry,Karlsruhe MiRO Refinery</value>
    </filters>
    <filters>
        <field>IK_Location_Name__c</field>
        <operation>equals</operation>
        <value>Ludwigshafen Shell Depot,Kehl Total Depot,Speyer Tanquid Depot,Fürth Unitank Depot,München Tanquid Depot,Würzburg Shell Depot,Regburg Petrotank depot</value>
    </filters>
    <filters>
        <field>Resolution_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Live Disruptions - South</label>
</ListView>