force-app/main/default/objects/Live_Disruption__c/listViews/Live_Disruptions_Switzerland.listView-meta.xml
<ListView>
    <fullName>Live_Disruptions_Switzerland</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Status_Indicator__c</columns>
    <columns>NAME</columns>
    <columns>IK_Locations__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Cause__c</columns>
    <columns>Begin_Date__c</columns>
    <columns>Estimated_End_Date__c</columns>
    <columns>Comment__c</columns>
    <columns>Resolve_Date_Time__c</columns>
    <columns>Resolution_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolution_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>IK_Location_Name__c</field>
        <operation>equals</operation>
        <value>Birsfdn Rhytank depot,Birsfdn Varo depot,Niederh Varo depot,Tägerschen TLT depot,Landqrt AGROLA depot,Pontresina Storz depot,Rothenburg Varo depot,Genève SOGEP depot,Collombey Tamoil depot,Cressier Varo depot</value>
    </filters>
    <label>Live Disruptions - Switzerland</label>
</ListView>