force-app/main/default/objects/Live_Disruption__c/listViews/Non_Physical_Product_Outage.listView-meta.xml
<ListView>
    <fullName>Non_Physical_Product_Outage</fullName>
    <columns>Status_Indicator__c</columns>
    <columns>NAME</columns>
    <columns>IK_Locations__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Cause__c</columns>
    <columns>Begin_Date__c</columns>
    <columns>Estimated_End_Date__c</columns>
    <columns>Comment__c</columns>
    <columns>Resolve_Date_Time__c</columns>
    <columns>Resolution_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Non-Physical Product Outage</value>
    </filters>
    <label>Non-Physical Product Outage</label>
</ListView>