force-app/main/default/objects/Live_Disruption__c/listViews/Resolved_Disruptions.listView-meta.xml
<ListView>
    <fullName>Resolved_Disruptions</fullName>
    <columns>Status_Indicator__c</columns>
    <columns>IK_Locations__c</columns>
    <columns>Product__c</columns>
    <columns>Status__c</columns>
    <columns>Cause__c</columns>
    <columns>Begin_Date__c</columns>
    <columns>Comment__c</columns>
    <columns>Resolve_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolution_Status__c</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </filters>
    <label>Resolved Disruptions</label>
</ListView>